--- a/DaLiPoker/proj.android-studio/daLiPoker/src/main/res/values/strings.xml
+++ b/DaLiPoker/proj.android-studio/daLiPoker/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">大李牌</string>
+    <string name="toast_exit">再次点击离开游戏</string>
 </resources>
